objects/Response_Evaluation__c.object
<CustomObject>
    <description>responses from the workshop evaluation</description>
    <fields>
        <fullName>Coaching_Mentoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What is your interest in follow-on support?</description>
        <inlineHelpText>What is your interest in follow-on support?</inlineHelpText>
        <label>Coaching/Mentoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Participant__r.Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_on_support__c</fullName>
        <inlineHelpText>To select multiple options, click Ctrl and select the options required</inlineHelpText>
        <label>Follow-on support</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Further training</fullName>
                </value>
                <value>
                    <fullName>Coaching / Mentoring</fullName>
                </value>
                <value>
                    <fullName>Preparation assistance</fullName>
                </value>
                <value>
                    <fullName>Process observation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What is your interest in follow-on support?</description>
        <inlineHelpText>What is your interest in follow-on support?</inlineHelpText>
        <label>Further Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Responses Evaluations</relationshipLabel>
        <relationshipName>Responses_Evaluation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marketing_Testimonial_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if OC participant is authorising us to use their comments as marketing testimonial</description>
        <inlineHelpText>Tick if OC participant is authorising us to use their comments as marketing testimonial</inlineHelpText>
        <label>Marketing Testimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_more_thing__c</fullName>
        <description>What are your final comments about this workshop as a whole?</description>
        <inlineHelpText>What are your final comments about this workshop as a whole?</inlineHelpText>
        <label>One more thing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_Recommendations_1__c</fullName>
        <description>What are your specific recommendations to enhance your organisation&apos;s overall negotiating effectiveness?</description>
        <inlineHelpText>What are your specific recommendations to enhance your organisation&apos;s overall negotiating effectiveness?</inlineHelpText>
        <label>Organisation Recommendations 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_Recommendations_2__c</fullName>
        <description>What are your specific recommendations to enhance your organisation&apos;s overall negotiating effectiveness?</description>
        <inlineHelpText>What are your specific recommendations to enhance your organisation&apos;s overall negotiating effectiveness?</inlineHelpText>
        <label>Organisation Recommendations 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_Recommendations_3__c</fullName>
        <description>What are your specific recommendations to enhance your organisation&apos;s overall negotiating effectiveness?</description>
        <inlineHelpText>What are your specific recommendations to enhance your organisation&apos;s overall negotiating effectiveness?</inlineHelpText>
        <label>Organisation Recommendations 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Evaluation responses</relationshipLabel>
        <relationshipName>Responses_Evaluation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preparation_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What is your interest in follow-on support?</description>
        <inlineHelpText>What is your interest in follow-on support?</inlineHelpText>
        <label>Preparation Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presenter_1_Clarity__c</fullName>
        <description>Presenter 1 - How well did we help you learn? - Clarity of presentation</description>
        <inlineHelpText>Presenter 1 - How well did we help you learn? - Clarity of presentation</inlineHelpText>
        <label>Presenter 1 - Clarity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_1_Language__c</fullName>
        <description>Presenter 1 - How well did we help you learn? - Relevant language</description>
        <inlineHelpText>Presenter 1 - How well did we help you learn? - Relevant language</inlineHelpText>
        <label>Presenter 1 - Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_1_Negotiating_Exerptise__c</fullName>
        <description>Presenter 1 - How well did we help you learn? - Negotiating expertise</description>
        <inlineHelpText>Presenter 1 - How well did we help you learn? - Negotiating expertise</inlineHelpText>
        <label>Presenter 1 - Negotiating Exerptise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_1_Overall__c</fullName>
        <description>Presenter 1 - How well did we help you learn? - Overall</description>
        <inlineHelpText>Presenter 1 - How well did we help you learn? - Overall</inlineHelpText>
        <label>Presenter 1 - Overall</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_1_Responsiveness__c</fullName>
        <description>Presenter 1 - How well did we help you learn? - Responsiveness to participants</description>
        <inlineHelpText>Presenter 1 - How well did we help you learn? - Responsiveness to participants</inlineHelpText>
        <label>Presenter 1 - Responsiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_2_Clarity__c</fullName>
        <description>Presenter 2 - How well did we help you learn? - Clarity of presentation</description>
        <inlineHelpText>Presenter 2 - How well did we help you learn? - Clarity of presentation</inlineHelpText>
        <label>Presenter 2 - Clarity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_2_Language__c</fullName>
        <description>Presenter 2 - How well did we help you learn? - Relevant language</description>
        <inlineHelpText>Presenter 2 - How well did we help you learn? - Relevant language</inlineHelpText>
        <label>Presenter 2 - Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_2_Negotiating_Exerptise__c</fullName>
        <description>Presenter 2- How well did we help you learn? - Negotiating expertise</description>
        <inlineHelpText>Presenter 2 - How well did we help you learn? - Negotiating expertise</inlineHelpText>
        <label>Presenter 2 - Negotiating Exerptise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_2_Overall__c</fullName>
        <description>Presenter 2 - How well did we help you learn? - Overall</description>
        <inlineHelpText>Presenter 2- How well did we help you learn? - Overall</inlineHelpText>
        <label>Presenter 2 - Overall</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_2_Responsiveness__c</fullName>
        <description>Presenter 2 - How well did we help you learn? - Responsiveness to participants</description>
        <inlineHelpText>Presenter 2 - How well did we help you learn? - Responsiveness to participants</inlineHelpText>
        <label>Presenter 2 - Responsiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Observation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What is your interest in follow-on support?</description>
        <inlineHelpText>What is your interest in follow-on support?</inlineHelpText>
        <label>Process Observation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_further_development__c</fullName>
        <formula>OR(
Further_Training__c,
Preparation_Assistance__c,
Coaching_Mentoring__c,
Process_Observation__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested further development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_1_Average__c</fullName>
        <formula>(SC_Presenter_1_Clarity__c + SC_Presenter_1_Language__c + SC_Presenter_1_Negotiating_Exerptise__c + SC_Presenter_1_Overall__c + SC_Presenter_1_Responsiveness__c)/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 1 - Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_1_Clarity__c</fullName>
        <formula>CASE(Presenter_1_Clarity__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <label>SC-Presenter 1 - Clarity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_1_Language__c</fullName>
        <formula>CASE(Presenter_1_Language__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 1 - Language</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_1_Negotiating_Exerptise__c</fullName>
        <formula>CASE(Presenter_1_Negotiating_Exerptise__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 1 - Negotiating Exerptise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_1_Overall__c</fullName>
        <formula>CASE(Presenter_1_Overall__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 1 - Overall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_1_Responsiveness__c</fullName>
        <formula>CASE(Presenter_1_Responsiveness__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 1 - Responsiveness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_2_Clarity__c</fullName>
        <formula>CASE(Presenter_2_Clarity__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 2 - Clarity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_2_Language__c</fullName>
        <formula>CASE(Presenter_2_Language__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 2 - Language</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_2_Negotiating_Exerptise__c</fullName>
        <formula>CASE(Presenter_2_Negotiating_Exerptise__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 2 - Negotiating Exerptise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_2_Overall__c</fullName>
        <formula>CASE(Presenter_2_Overall__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 2 - Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Presenter_2_Responsiveness__c</fullName>
        <formula>CASE(Presenter_2_Responsiveness__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Presenter 2 - Responsiveness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Your_Workshop_Duration__c</fullName>
        <formula>CASE(Your_Workshop_Duration__c,
&quot;Right length&quot;,5,
&quot;Somewhat long&quot;,4,
&quot;Somewhat short&quot;,3,
&quot;Too short&quot;,2,
&quot;Too long&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Your Workshop - Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Your_Workshop_apply_learnings__c</fullName>
        <formula>CASE(Your_Workshop_apply_learnings__c,
&quot;Definitely&quot;,5,
&quot;Probably&quot;,4,
&quot;Possibly&quot;,3,
&quot;Probably not&quot;,2,
&quot;Would not&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Your Workshop - apply learnings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Your_Workshop_content__c</fullName>
        <formula>CASE(Your_Workshop_content__c,
&quot;Appropriate&quot;,5,
&quot;Somewhat simple&quot;,4,
&quot;Somewhat complex&quot;,3,
&quot;Too simple&quot;,2,
&quot;Too complex&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Your Workshop - content</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Your_Workshop_materials__c</fullName>
        <formula>CASE(Your_Workshop_materials__c,
&quot;Excellent&quot;,5,
&quot;Good&quot;,4,
&quot;Average&quot;,3,
&quot;Below average&quot;,2,
&quot;Poor&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Your Workshop - materials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Your_Workshop_objectives__c</fullName>
        <formula>CASE(Your_Workshop_objectives__c,
&quot;Exceeded&quot;,5,
&quot;Achieved&quot;,4,
&quot;Mostly met&quot;,3,
&quot;Partially met&quot;,2,
&quot;Not met&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Your Workshop - objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Your_Workshop_recommend__c</fullName>
        <formula>CASE(Your_Workshop_recommend__c,
&quot;Definitely&quot;,5,
&quot;Probably&quot;,4,
&quot;Possibly&quot;,3,
&quot;Probably not&quot;,2,
&quot;Would not&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Your Workshop - recommend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Your_Workshop_theory_and_practice__c</fullName>
        <formula>CASE(Your_Workshop_theory_and_practice__c,
&quot;Well balanced&quot;,5,
&quot;Somewhat practical&quot;,4,
&quot;Somewhat theoretical&quot;,3,
&quot;Too theoretical&quot;,2,
&quot;Too practical&quot;,1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SC-Your Workshop - theory and practice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_response_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Your_Workshop_Duration__c</fullName>
        <description>Duration of workshop? (Based on workshop content, not time away from work)</description>
        <inlineHelpText>Duration of workshop? (Based on workshop content, not time away from work)</inlineHelpText>
        <label>Your Workshop - Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Too Short</fullName>
                </value>
                <value>
                    <fullName>Somewhat short</fullName>
                </value>
                <value>
                    <fullName>Right Length</fullName>
                </value>
                <value>
                    <fullName>Somewhat long</fullName>
                </value>
                <value>
                    <fullName>Too long</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Workshop_apply_learnings__c</fullName>
        <description>Able to apply the workshop learnings immediately?</description>
        <inlineHelpText>Able to apply the workshop learnings immediately?</inlineHelpText>
        <label>Your Workshop - apply learnings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Definitely</fullName>
                </value>
                <value>
                    <fullName>Probably</fullName>
                </value>
                <value>
                    <fullName>Possibly</fullName>
                </value>
                <value>
                    <fullName>Probably not</fullName>
                </value>
                <value>
                    <fullName>Would not</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Workshop_content__c</fullName>
        <description>Level of workshop content?</description>
        <inlineHelpText>Level of workshop content?</inlineHelpText>
        <label>Your Workshop - content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Too simple</fullName>
                </value>
                <value>
                    <fullName>Somewhat simple</fullName>
                </value>
                <value>
                    <fullName>Appropriate</fullName>
                </value>
                <value>
                    <fullName>Somewhat complex</fullName>
                </value>
                <value>
                    <fullName>Too complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Workshop_materials__c</fullName>
        <description>Usefulness of materials (manual, workbook, cards etc)?</description>
        <inlineHelpText>Usefulness of materials (manual, workbook, cards etc)?</inlineHelpText>
        <label>Your Workshop - materials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Workshop_objectives__c</fullName>
        <description>How well were your objectives met?</description>
        <inlineHelpText>How well were your objectives met?</inlineHelpText>
        <label>Your Workshop - objectives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeded</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>Mostly met</fullName>
                </value>
                <value>
                    <fullName>Partially met</fullName>
                </value>
                <value>
                    <fullName>Not met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Workshop_recommend__c</fullName>
        <description>Recommend workshop to others?</description>
        <inlineHelpText>Recommend workshop to others?</inlineHelpText>
        <label>Your Workshop - recommend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Definitely</fullName>
                </value>
                <value>
                    <fullName>Probably</fullName>
                </value>
                <value>
                    <fullName>Possibly</fullName>
                </value>
                <value>
                    <fullName>Probably not</fullName>
                </value>
                <value>
                    <fullName>Would not</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Workshop_theory_and_practice__c</fullName>
        <description>Balance of theory and practice?</description>
        <inlineHelpText>Balance of theory and practice?</inlineHelpText>
        <label>Your Workshop - theory and practice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Too theoretical</fullName>
                </value>
                <value>
                    <fullName>Somewhat theoretical</fullName>
                </value>
                <value>
                    <fullName>Well balanced</fullName>
                </value>
                <value>
                    <fullName>Somewhat practical</fullName>
                </value>
                <value>
                    <fullName>Too practical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Response Evaluation</label>
    <nameField>
        <displayFormat>R-E-{000000000}</displayFormat>
        <label>Response Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses Evaluation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Job_or_PAX</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Participant__c),
ISBLANK(Job__c)
)</errorConditionFormula>
        <errorMessage>Please select either a Job (for anonymous evaluation) or a Participant (of not anonymous).</errorMessage>
    </validationRules>
</CustomObject>